HW14 basic done

--- a/public/index.html
+++ b/public/index.html
@@ -18,15 +18,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="container">
-      <h1 id="counter" class="counter">0</h1>
-      <div class="wrap">
-      <button id="inc" class="btn inc"><img src="img/plus.png"></button>
-      <button id="dec" class="btn dec"><img src="img/minus.png"></button>
+    <div id="root">
       
-      <!-- <button id="rnd" class="btn btn-primary">RND</button> -->
-      <div id="rfr" class="refresh"><img src="img/refresh.png"></div>
-    </div>
     </div>
     
   </body>
